@@ -17,7 +17,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Test on NetBSD 9.2
-      uses: cross-platform-actions/action@v0.7.0
+      uses: cross-platform-actions/action@v0.10.0
       with:
         operating_system: netbsd
         version: '9.2'
