@@ -16,11 +16,11 @@ jobs:
     - name: Repository checkout
       uses: actions/checkout@v3
 
-    - name: Test on OpenBSD 7.1
-      uses: cross-platform-actions/action@v0.7.0
+    - name: Test on OpenBSD 7.2
+      uses: cross-platform-actions/action@v0.10.0
       with:
         operating_system: openbsd
-        version: '7.1'
+        version: '7.2'
         shell: bash
         run: |
           uname -a
